--- a/src/components/SiteHeader/SiteHeader.module.css
+++ b/src/components/SiteHeader/SiteHeader.module.css
@@ -1,4 +1,20 @@
 .wrapper{
-    height:10%;
-    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top:0;
+    height:min-content;
+    background-color: #8FB8DE;
+    margin:0;
+    line-height: 3em;
+}
+
+.navbar{
+    display: flex;
+    flex-direction: row;
+
+}
+
+h1{
+    margin:0;
 }
